[package]
name = "gravity_toy"
version = "0.1.0"
authors = ["Alex Ford <gordion42@gmail.com>"]
edition = "2018"

[dependencies]
ggez = "0.5"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.46"
nfd = {git = "https://github.com/EmbarkStudios/nfd-rs/", branch = "update-submodule"}